src/test/ui/consts/const-eval/promoted_const_fn_fail.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_fn_fail.rs:20:27
   |
LL |     let x: &'static u8 = &(bar() + 1);
   |            -----------    ^^^^^^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
